<resources>
    <string name="app_name">deepur</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="more">More</string>
    <string name="options">Options</string>
    <string name="favorite">Favorite</string>
    <string name="open_camera">Open camera</string>
    <string name="attach">Attach</string>
    <string name="album_permission">To share an image, give deepur access to Media</string>
    <string name="allow">Allow</string>
    <string name="stories">Stories</string>
    <string name="categories">Categories</string>
    <string name="error">There is something wrong</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="user_name">User Name</string>
    <string name="skip">Skip</string>
    <string name="create">Create</string>
    <string name="finish">Finish</string>
    <string name="search">Search</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="email_example">email@email.com</string>
    <string name="password_example">******</string>
    <string name="login">LOGIN</string>
    <string name="back">Back</string>
    <string name="edit">Edit</string>
    <string name="close">Close</string>
    <string name="send">Send</string>

    <!-- LOGIN -->
    <string name="activity_login_email">Email</string>
    <string name="activity_login_password">Password</string>
    <string name="activity_login_email_text_input">Please enter a valid email</string>
    <string name="activity_login_password_text_input">Wrong password</string>
    <string name="login_loading">Loading</string>
    <string name="activity_login_sign_in_facebook">LOGIN FACEBOOK</string>
    <string name="activity_login_sign_out">Sign out</string>
    <string name="activity_login_sign_in">Sign in</string>
    <string name="activity_login_sign_in_google">Sign in with Google</string>
    <string name="activity_login_verify_email">Verify</string>
    <string name="activity_login_auth_status">Something is wrong, try again</string>
    <string name="activity_login_create_account">Create account</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="activity_login_user_not_found">User not found</string>

    <!-- LOGIN PICTURE -->
    <string name="activity_login_picture_title">Set profile picture</string>
    <string name="activity_login_picture_user_image">user image profile</string>
    <string name="activity_login_next_button">NEXT</string>

    <!-- ACTIVITY MAIN HEADER -->
    <string name="activity_main_header_latest_post_title">LATEST POST</string>

    <!-- ITEM POST -->
    <string name="fragment_item_post_love">LOVE</string>
    <string name="fragment_new_item_post_edit_text">what\'s up?</string>
    <string name="fragment_new_item_post_attached_files_text">ATTACHED FILES</string>

    <!-- ACTIVITY SETTINGS -->

    <string name="title_activity_settings">Settings</string>
    <string name="activity_settings_day_night_title">Day&amp;Night mode</string>
    <string name="activity_settings_day_night_description">Changes between day/night based on the time of day</string>
    <string name="activity_settings_account_title">Account</string>
    <string name="activity_settings_notification_title">Notifications</string>
    <string name="activity_settings_change_password">Change password</string>

    <!-- ACTIVITY MESSENGER -->
    <string name="title_activity_messenger">Messenger</string>
    <string name="activity_messenger_edit_text">Type a message</string>

    <!-- FACEBOOK -->
    <string name="facebook_app_id">230953874089702</string>
    <string name="fb_login_protocol_scheme">fb230953874089702</string>
    <string name="title_activity_onboarding">OnboardingActivity</string>
    <string name="action_settings">Settings</string>

    <!-- Onboarding -->

    <string name="onboarding1">Text one</string>
    <string name="onboarding2">Text two</string>
    <string name="onboarding3">Text three</string>

    <!-- NOTIFICATIONS -->

    <string name="fragment_notifications_action_like">liked your post</string>

    <!-- CATEGORIES -->
    <string name="fragment_categories_trending_title">Trending topics</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
