<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/activity_login_coordinator"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:id="@+id/activity_login_relative"
        android:background="@drawable/animation_list">

        <ImageView
            android:id="@+id/activity_login_deepur_logo"
            android:layout_width="match_parent"
            android:layout_height="144dp"
            android:contentDescription="@string/app_name"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:visibility="gone"
            android:layout_marginTop="56dp"
            android:src="@drawable/ic_logo" />

        <TextView
            android:id="@+id/activity_login_deepur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/activity_login_deepur_logo"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/comfortaa_bold"
            android:text="@string/app_name"
            android:textColor="@color/active_icon"
            android:textSize="34sp"
            android:layout_margin="32dp"/>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/activity_login_email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_edit_text"
            android:textColorHint="@color/text_color_hint"
            android:layout_below="@id/activity_login_deepur"
            android:fontFamily="sans-serif"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:hint="@string/activity_login_email"
            android:imeOptions="actionNext"
            android:textColor="@color/text_color_secondary"
            android:textSize="14sp" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/activity_login_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:imeOptions="actionDone"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_edit_text"
            android:textColorHint="@color/text_color_hint"
            android:layout_below="@id/activity_login_email_edit_text"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:textSize="14sp"
            android:fontFamily="sans-serif"
            android:inputType="textPassword"
            android:textColor="@color/text_color_secondary"
            android:hint="@string/activity_login_password"/>

        <TextView
            android:id="@+id/activity_login_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_login_password_edit_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:background="@drawable/bg_button_stroke"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:letterSpacing="0.07"
            android:minWidth="144dp"
            android:padding="8dp"
            android:text="@string/activity_login_sign_in"
            android:textAllCaps="true"
            android:visibility="gone"
            android:textColor="@color/color_accent"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/activity_login_sign_in_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_login_password_edit_text"
            android:layout_centerHorizontal="true"
            android:layout_margin="32dp"
            android:background="@drawable/bg_button_white"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:letterSpacing="0.07"
            android:textAllCaps="true"
            android:elevation="2dp"
            android:minWidth="256dp"
            android:drawableStart="@drawable/googleg_standard_color_18"
            android:padding="8dp"
            android:text="@string/activity_login_sign_in_google"
            android:textColor="@color/text_color_secondary"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/activity_login_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_login_sign_in_google"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:alpha="0.6"
            android:textSize="14sp"
            android:visibility="gone"
            android:textColor="@color/text_color_primary"/>

        <TextView
            android:id="@+id/activity_login_create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_login_status"
            android:text="@string/activity_login_create_account"
            android:visibility="gone"
            android:padding="8dp"
            android:minWidth="96dp"
            android:layout_margin="16dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:textSize="14sp"
            android:textAllCaps="true"
            android:textColor="@color/text_color_secondary"/>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>