<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context="com.ruiriot.deepur.activity.SettingsActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppToolbarTheme"
        android:elevation="4dp"
        app:contentInsetStart="0dp"
        android:contentInsetEnd="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/activity_settings_back_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_back_24dp"
                android:tint="@color/active_icon"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:layout_margin="8dp"
                android:padding="8dp"/>

            <TextView
                android:id="@+id/activity_settings_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_activity_settings"
                android:textSize="20sp"
                android:fontFamily="sans-serif-medium"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/activity_settings_back_icon"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textColor="@color/text_color_primary"/>

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/activity_settings_account_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_settings_account_title"
        android:textSize="12sp"
        android:textColor="@color/color_accent"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="72dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif"/>

    <RelativeLayout
        android:id="@+id/activity_settings_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/activity_settings_image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/activity_settings_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textSize="14sp"
            android:textColor="@color/text_color_primary"
            android:layout_marginStart="72dp"
            android:layout_marginEnd="72dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="2dp"
            android:fontFamily="sans-serif"/>

        <TextView
            android:id="@+id/activity_settings_account_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/activity_settings_name"
            android:fontFamily="sans-serif"
            android:text="@string/email_example"
            android:textColor="@color/text_color_secondary"
            android:textSize="14sp"
            android:layout_marginStart="72dp"
            android:layout_marginEnd="72dp" />

        <ImageView
            android:id="@+id/activity_settings_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="back"
            android:src="@drawable/ic_keyboard_arrow_right_24dp"
            android:tint="@color/active_icon"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:padding="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:background="@color/divider"/>

    <RelativeLayout
        android:id="@+id/activity_settings_day_night"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:paddingStart="64dp"
        android:paddingEnd="64dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/activity_settings_day_night_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_settings_day_night_title"
            android:textSize="14sp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="sans-serif"
            android:textColor="@color/text_color_primary"/>

        <TextView
            android:id="@+id/activity_settings_day_night_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="On"
            android:layout_below="@id/activity_settings_day_night_title"
            android:textSize="14sp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="2dp"
            android:fontFamily="sans-serif"
            android:textColor="@color/text_color_secondary"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/ripple">

        <TextView
            android:id="@+id/activity_settings_notification_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_settings_notification_title"
            android:textSize="14sp"
            android:fontFamily="sans-serif"
            android:textColor="@color/text_color_primary"
            android:layout_marginStart="72dp"
            android:layout_marginEnd="64dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_centerVertical="true"/>

        <Switch
            android:id="@+id/activity_settings_switch_notifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:padding="8dp"
            android:elevation="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>

    </RelativeLayout>

</LinearLayout>
