<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.ruiriot.deepur.activity.AccountActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/activity_account_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppToolbarTheme"
        android:elevation="4dp"
        app:contentInsetStart="0dp"
        android:contentInsetEnd="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/activity_account_back_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/back"
                android:src="@drawable/ic_arrow_back_24dp"
                android:background="@drawable/ripple_borderless"
                android:clickable="true"
                android:focusable="true"
                android:layout_margin="8dp"
                android:padding="8dp"/>

            <TextView
                android:id="@+id/activity_account_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_settings_account_title"
                android:textSize="20sp"
                android:fontFamily="sans-serif-medium"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/activity_account_back_icon"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textColor="@color/text_color_primary"/>

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/activity_account_image"
        android:layout_width="144dp"
        android:layout_height="144dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="48dp"
        android:src="@drawable/ic_photo_camera_black_image"
        app:civ_border_width="2dp"
        app:civ_border_color="@color/color_primary_dark"
        android:layout_below="@id/activity_account_toolbar"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/activity_account_image_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/activity_account_image"
        android:src="@drawable/ic_camera_alt_24dp"
        app:backgroundTint="@color/color_accent"
        app:elevation="6dp"
        app:pressedTranslationZ="12dp"
        android:layout_margin="4dp"
        android:layout_alignEnd="@id/activity_account_image"
        app:layout_behavior="com.ruiriot.deepur.utils.FABAwareScrollingViewBehavior"
        android:clickable="true"
        android:focusable="true"
        app:fabSize="mini"/>

    <RelativeLayout
        android:id="@+id/activity_account_ll"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_account_image"
        android:background="@color/color_primary">

        <EditText
            android:id="@+id/activity_account_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/activity_account_name"
            android:textSize="20sp"
            android:textColor="@color/text_color_primary"
            android:layout_centerVertical="true"
            android:paddingStart="16dp"
            android:paddingEnd="72dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:background="@color/transparent"
            android:fontFamily="sans-serif-condensed"
            android:inputType="textCapWords"
            android:imeOptions="actionDone"
            android:enabled="false"/>

        <ImageView
            android:id="@+id/activity_account_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/edit"
            android:src="@drawable/ic_mode_edit_24dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:padding="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/ripple_borderless"/>

        <ImageView
            android:id="@+id/activity_account_edit_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/done"
            android:src="@drawable/ic_check_24dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:visibility="gone"
            android:padding="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/ripple_borderless"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/activity_account_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_account_ll"
        android:gravity="center"
        android:text="@string/activity_login_email"
        android:textSize="14sp"
        android:textColor="@color/text_color_secondary"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif"/>

    <TextView
        android:id="@+id/activity_account_sign_out_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minWidth="96dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_button_stroke"
        android:text="@string/done"
        android:padding="8dp"
        android:textSize="16sp"
        android:textColor="@color/color_accent"
        android:fontFamily="sans-serif-medium"
        android:textAllCaps="true"
        android:layout_centerVertical="true"
        android:layout_margin="16dp"
        android:clickable="true"
        android:focusable="true"/>

</RelativeLayout>
